@@ -6997,11 +6997,6 @@ operator|new
 name|HStoreKey
 argument_list|()
 decl_stmt|;
-name|HStoreKey
-name|strippedKey
-init|=
-literal|null
-decl_stmt|;
 synchronized|synchronized
 init|(
 name|map
@@ -7046,14 +7041,84 @@ name|isEmpty
 argument_list|()
 condition|)
 block|{
+name|rowKeyFromMapFileEmptyKeys
+argument_list|(
+name|map
+argument_list|,
+name|row
+argument_list|,
+name|candidateKeys
+argument_list|,
+name|now
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
+name|rowKeyAtOrBeforeExistingCandKeys
+argument_list|(
+name|map
+argument_list|,
+name|row
+argument_list|,
+name|candidateKeys
+argument_list|,
+name|now
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+specifier|private
+name|void
+name|rowKeyFromMapFileEmptyKeys
+parameter_list|(
+name|MapFile
+operator|.
+name|Reader
+name|map
+parameter_list|,
+name|byte
+index|[]
+name|row
+parameter_list|,
+name|SortedMap
+argument_list|<
+name|HStoreKey
+argument_list|,
+name|Long
+argument_list|>
+name|candidateKeys
+parameter_list|,
+name|long
+name|now
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+name|HStoreKey
 name|searchKey
-operator|=
+init|=
 operator|new
 name|HStoreKey
 argument_list|(
 name|row
 argument_list|)
-expr_stmt|;
+decl_stmt|;
+name|ImmutableBytesWritable
+name|readval
+init|=
+operator|new
+name|ImmutableBytesWritable
+argument_list|()
+decl_stmt|;
+name|HStoreKey
+name|readkey
+init|=
+operator|new
+name|HStoreKey
+argument_list|()
+decl_stmt|;
 comment|// if the row we're looking for is past the end of this mapfile, just
 comment|// save time and add the last key to the candidates.
 name|HStoreKey
@@ -7352,13 +7417,58 @@ comment|// arriving here just means that we consumed the whole rest of the map
 comment|// without going "past" the key we're searching for. we can just fall
 comment|// through here.
 block|}
-else|else
+specifier|private
+name|void
+name|rowKeyAtOrBeforeExistingCandKeys
+parameter_list|(
+name|MapFile
+operator|.
+name|Reader
+name|map
+parameter_list|,
+name|byte
+index|[]
+name|row
+parameter_list|,
+name|SortedMap
+argument_list|<
+name|HStoreKey
+argument_list|,
+name|Long
+argument_list|>
+name|candidateKeys
+parameter_list|,
+name|long
+name|now
+parameter_list|)
+throws|throws
+name|IOException
 block|{
+name|HStoreKey
+name|strippedKey
+init|=
+literal|null
+decl_stmt|;
+name|ImmutableBytesWritable
+name|readval
+init|=
+operator|new
+name|ImmutableBytesWritable
+argument_list|()
+decl_stmt|;
+name|HStoreKey
+name|readkey
+init|=
+operator|new
+name|HStoreKey
+argument_list|()
+decl_stmt|;
 comment|// if there are already candidate keys, we need to start our search
 comment|// at the earliest possible key so that we can discover any possible
 comment|// deletes for keys between the start and the search key.
+name|HStoreKey
 name|searchKey
-operator|=
+init|=
 operator|new
 name|HStoreKey
 argument_list|(
@@ -7370,7 +7480,7 @@ operator|.
 name|getRow
 argument_list|()
 argument_list|)
-expr_stmt|;
+decl_stmt|;
 comment|// if the row we're looking for is past the end of this mapfile, just
 comment|// save time and add the last key to the candidates.
 name|HStoreKey
@@ -7486,7 +7596,6 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
-block|}
 block|}
 return|return;
 block|}
@@ -7830,7 +7939,6 @@ name|readval
 argument_list|)
 condition|)
 do|;
-block|}
 block|}
 specifier|static
 name|HStoreKey
