@@ -1484,6 +1484,398 @@ expr_stmt|;
 block|}
 block|}
 block|}
+comment|/** For HBASE-694 */
+specifier|public
+name|void
+name|testGetClosestRowBefore2
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|HRegion
+name|region
+init|=
+literal|null
+decl_stmt|;
+name|BatchUpdate
+name|batchUpdate
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+name|HTableDescriptor
+name|htd
+init|=
+name|createTableDescriptor
+argument_list|(
+name|getName
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|region
+operator|=
+name|createNewHRegion
+argument_list|(
+name|htd
+argument_list|,
+literal|null
+argument_list|,
+literal|null
+argument_list|)
+expr_stmt|;
+comment|// set up some test data
+name|String
+name|t10
+init|=
+literal|"010"
+decl_stmt|;
+name|String
+name|t20
+init|=
+literal|"020"
+decl_stmt|;
+name|String
+name|t30
+init|=
+literal|"030"
+decl_stmt|;
+name|String
+name|t40
+init|=
+literal|"040"
+decl_stmt|;
+name|batchUpdate
+operator|=
+operator|new
+name|BatchUpdate
+argument_list|(
+name|t10
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|.
+name|put
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|,
+literal|"t10 bytes"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|batchUpdate
+argument_list|(
+name|batchUpdate
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|=
+operator|new
+name|BatchUpdate
+argument_list|(
+name|t30
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|.
+name|put
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|,
+literal|"t30 bytes"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|batchUpdate
+argument_list|(
+name|batchUpdate
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|=
+operator|new
+name|BatchUpdate
+argument_list|(
+name|t40
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|.
+name|put
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|,
+literal|"t40 bytes"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|batchUpdate
+argument_list|(
+name|batchUpdate
+argument_list|)
+expr_stmt|;
+comment|// try finding "035"
+name|String
+name|t35
+init|=
+literal|"035"
+decl_stmt|;
+name|Map
+argument_list|<
+name|byte
+index|[]
+argument_list|,
+name|Cell
+argument_list|>
+name|results
+init|=
+name|region
+operator|.
+name|getClosestRowBefore
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|t35
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|String
+argument_list|(
+name|results
+operator|.
+name|get
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+argument_list|,
+literal|"t30 bytes"
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|flushcache
+argument_list|()
+expr_stmt|;
+comment|// try finding "035"
+name|results
+operator|=
+name|region
+operator|.
+name|getClosestRowBefore
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|t35
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|String
+argument_list|(
+name|results
+operator|.
+name|get
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+argument_list|,
+literal|"t30 bytes"
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|=
+operator|new
+name|BatchUpdate
+argument_list|(
+name|t20
+argument_list|)
+expr_stmt|;
+name|batchUpdate
+operator|.
+name|put
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|,
+literal|"t20 bytes"
+operator|.
+name|getBytes
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|batchUpdate
+argument_list|(
+name|batchUpdate
+argument_list|)
+expr_stmt|;
+comment|// try finding "035"
+name|results
+operator|=
+name|region
+operator|.
+name|getClosestRowBefore
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|t35
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|String
+argument_list|(
+name|results
+operator|.
+name|get
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+argument_list|,
+literal|"t30 bytes"
+argument_list|)
+expr_stmt|;
+name|region
+operator|.
+name|flushcache
+argument_list|()
+expr_stmt|;
+comment|// try finding "035"
+name|results
+operator|=
+name|region
+operator|.
+name|getClosestRowBefore
+argument_list|(
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
+name|t35
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+operator|new
+name|String
+argument_list|(
+name|results
+operator|.
+name|get
+argument_list|(
+name|COLUMNS
+index|[
+literal|0
+index|]
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|)
+argument_list|,
+literal|"t30 bytes"
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+if|if
+condition|(
+name|region
+operator|!=
+literal|null
+condition|)
+block|{
+try|try
+block|{
+name|region
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e
+parameter_list|)
+block|{
+name|e
+operator|.
+name|printStackTrace
+argument_list|()
+expr_stmt|;
+block|}
+name|region
+operator|.
+name|getLog
+argument_list|()
+operator|.
+name|closeAndDelete
+argument_list|()
+expr_stmt|;
+block|}
+block|}
+block|}
 comment|/**    * For HBASE-40    */
 specifier|public
 name|void
